<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/body_container"
        tools:context=".MainActivity"
        android:background="#000">



    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_margin="2dp"
    android:elevation="2dp"
    app:menu="@menu/item_menu"
    android:background="@drawable/round_corner"
    app:itemRippleColor="@android:color/transparent"
    app:labelVisibilityMode="unlabeled"
    app:itemIconSize="25dp"
    app:itemIconTint="@drawable/item_selector"
    android:id="@+id/bottom_navbar"/>


    <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rowCount="3"
            app:columnCount="3"
            android:layout_above="@+id/bottom_navbar"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:id="@+id/menu3x3">


        <LinearLayout
            android:orientation="vertical"
        android:gravity="fill"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
         android:layout_marginEnd="15dp">

        <ImageButton
               android:layout_height="40dp"
               android:layout_width="match_parent"
                app:srcCompat="@drawable/ic_transfer"
                android:id="@+id/imageButton1"
        android:background="@drawable/imagebutton_round_corner"
            app:tint="@drawable/item_selector">
        </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/transfer"
                    android:textColor="#8e8e93"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:maxWidth="10dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
               android:layout_marginRight="15dp">

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_exchange"
                    android:id="@+id/imageButton2"
                    android:background="@drawable/imagebutton_round_corner"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/exchange"
                    android:textColor="#8e8e93"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:maxWidth="10dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>


        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                >

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_payments"
                    android:id="@+id/imageButton3"
                    android:background="@drawable/imagebutton_round_corner"
            android:onClick="createClicked"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="Create"
                    android:textColor="#8e8e93"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:maxWidth="10dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_marginRight="15dp">

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_savings"
                    android:id="@+id/imageButton4"
                    android:background="@drawable/imagebutton_round_corner"
                  android:onClick="savingsClicked"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/savings"
                    android:textColor="#8e8e93"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:maxWidth="10dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_marginRight="15dp">

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_percent"
                    android:id="@+id/imageButton5"
                    android:background="@drawable/imagebutton_round_corner"
                android:onClick="percentageClicked"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/percentage"
                    android:textColor="#8e8e93"
                    android:maxWidth="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>


        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
               >

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_cashback"
                    android:id="@+id/imageButton6"
                    android:background="@drawable/imagebutton_round_corner"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="Achievements"
                    android:textColor="#8e8e93"
                    android:maxWidth="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:layout_marginRight="15dp">

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_transfers"
                    android:id="@+id/imageButton7"
                    android:background="@drawable/imagebutton_round_corner"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/transfersave"
                    android:textColor="#8e8e93"
                    android:maxWidth="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
               android:layout_marginRight="15dp">

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_security"
                    android:id="@+id/imageButton8"
                    android:background="@drawable/imagebutton_round_corner"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/security"
                    android:textColor="#8e8e93"
                    android:maxWidth="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>


        <LinearLayout
                android:orientation="vertical"
                android:gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
              >

            <ImageButton
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/ic_more"
                    android:id="@+id/imageButton9"
                    android:background="@drawable/imagebutton_round_corner"
                app:tint="@drawable/item_selector">
            </ImageButton>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="#8e8e93"
                    android:maxWidth="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins">

            </TextView>

        </LinearLayout>


    </androidx.gridlayout.widget.GridLayout>


    <ImageButton
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_width="45dp"
            android:layout_height="41dp"
            android:background="@drawable/imagebutton_round_corner"
            android:src="@drawable/ic_settings">

    </ImageButton>
    <ImageButton
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
               android:layout_width="45dp"
               android:layout_height="41dp"
               android:background="@drawable/imagebutton_round_corner"
               android:src="@drawable/ic_notifications"
    android:id="@+id/notif">

       </ImageButton>


    <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu3x3"
            android:layout_below="@id/notif"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:rowCount="1"
            app:columnCount="2">


        <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
        >

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/balance"
                      android:textColor="#8e8e93"
                      android:layout_marginTop="15dp"
                      android:fontFamily="@font/poppins"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lei"
                    android:textColor="#fff"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="27sp"
                    android:id="@+id/balance"
                    android:textStyle="normal"

            />


            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/month"
                      android:textColor="#8e8e93"
                      android:layout_marginTop="10dp"
                      android:fontFamily="@font/poppins"
            />


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_up"

                />

                <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lei"
                        android:textColor="#fff"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="20sp"
                        android:id="@+id/bal"
                />


            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >

                <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_down"
                />

                <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3,710 lei"
                        android:textColor="#fff"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="20sp"
                        android:id="@+id/pays"
                />


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/main_card"
                android:id="@+id/main_card"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_alignTop="@+id/main_card"
                android:layout_alignStart="@+id/main_card"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:maxWidth="100dp"
                android:text="Main card"
                android:textColor="#000"
                android:textSize="25sp">

            </TextView>


        </RelativeLayout>




    </androidx.gridlayout.widget.GridLayout>


</RelativeLayout>
